--- a/.github/workflows/my-workflow.yml
+++ b/.github/workflows/my-workflow.yml
@@ -8,6 +8,7 @@ jobs:
   comment:
     runs-on: ubuntu-latest
     steps:
+    - name: Comment on new issue - Commento sul nuovo problema
     - uses: actions/github-script@0.8.0
       with:
         github-token: ${{secrets.GITHUB_TOKEN}}
@@ -18,6 +19,12 @@ jobs:
             repo: context.repo.repo,
             body: "🎉 You've created this issue comment using GitHub Script - Hai creato questo commento sul problema utilizzando GitHub Script!!!"
             })
+    - name: Add issue to project board - Aggiungi il problema alla scheda progetto
+      if: contains(github.event.issue.labels.*.name, 'bug')
+      uses: actions/github-script@0.8.0
+      with:
+        github-token: ${{secrets.GITHUB_TOKEN}}
+        script: |
             github.projects.createCard({
             column_id: 11640881,
             content_id: context.payload.issue.id,
